--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,10 +16,11 @@
 			
 			// Add the IDs of extensions you want installed when the container is created.
 			"extensions": [
+				"ms-azuretools.azure-dev",
 				"ms-azuretools.vscode-azurefunctions",
 				"ms-vscode.powershell",
+				"ms-azuretools.vscode-docker",
 				"GitHub.copilot"
-				
 			]
 		}
 	},
@@ -31,5 +32,7 @@
 	"remoteUser": "vscode",
 	"features": {
 		"ghcr.io/devcontainers/features/azure-cli:1": {}
-	}
+	},
+
+	"postCreateCommand": "pwsh .devcontainer/install-azurefunctions-module.ps1"
 }
